// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category template should render correctly 1`] = `
<div
  className="sc-jJEKmz dPuFhU"
>
  <h1
    className="sc-jSgvzq FRpcC"
  >
    Category A
  </h1>
  <div
    className="sc-gWHigU eRSuBn"
  >
    <span
      className="sc-jcVcSv dSigqm"
      size="2rem"
    />
  </div>
  <div
    className="sc-hiSbEG hObFLk"
  >
    <span
      className="sc-jcVcSv coWmFG"
      size="4rem"
    />
  </div>
</div>
`;

exports[`category template should render correctly 2`] = `
<div
  className="sc-jJEKmz dPuFhU"
>
  <h1
    className="sc-jSgvzq FRpcC"
  >
    Category B
  </h1>
  <div
    className="sc-gWHigU eRSuBn"
  >
    <span
      className="sc-jcVcSv dSigqm"
      size="2rem"
    />
  </div>
  <div
    className="sc-hiSbEG hObFLk"
  >
    <span
      className="sc-jcVcSv coWmFG"
      size="4rem"
    />
  </div>
</div>
`;
